Finish data_analysis file
All intermediate results done.

--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,6 +688,44 @@
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
     "data_sliced = data_sliced[:10]\n",
     "latex_table = data_sliced.style.to_latex()\n",
+    "print(latex_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Acurácia e Runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrr}\n",
+      " & runtime & mae_len & rmse_len \\\\\n",
+      "technique &  &  &  \\\\\n",
+      "esprit & 3.337880 & 0.000000 & 0.000000 \\\\\n",
+      "music_coarse_fine_grid_search & 389.173500 & 0.189933 & 5.811139 \\\\\n",
+      "music_gradient_simple & 421.681562 & 0.139422 & 4.500887 \\\\\n",
+      "music_gradient_adapt_lr & 104.988852 & 0.380535 & 7.797440 \\\\\n",
+      "music_gradient_momentum & 88.167398 & 0.386829 & 8.189054 \\\\\n",
+      "music_gradient_nesterov & 88.831055 & 0.349273 & 7.629486 \\\\\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv(root_dir + \"/data/experimental_results/accuracy_runtime.csv\", index_col=0, float_precision='high')\n",
+    "data['runtime'] = data['runtime'] / 1000\n",
+    "data = data[['runtime', 'mae_len', 'rmse_len']]\n",
+    "latex_table = data.style.to_latex()\n",
     "print(latex_table)"
    ]
   }
