Add raspberry experiments
Styles changes in figures

--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -111,14 +111,14 @@
       "\\begin{tabular}{lrrrr}\n",
       " & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  \\\\\n",
-      "2 & 7.059155 & 0.130431 & 1.596446 & 0.092674 \\\\\n",
-      "3 & 3.843849 & 0.156640 & 1.818315 & 0.095617 \\\\\n",
-      "4 & 3.279692 & 0.247761 & 4.142792 & 0.100221 \\\\\n",
-      "5 & 3.430512 & 0.262222 & 4.170201 & 0.097209 \\\\\n",
-      "6 & 3.949999 & 0.442563 & 7.335439 & 0.095240 \\\\\n",
-      "7 & 4.860621 & 0.664788 & 9.204467 & 0.180959 \\\\\n",
-      "8 & 5.985516 & 0.741939 & 8.878081 & 0.196430 \\\\\n",
-      "9 & 7.184012 & 1.290702 & 14.509010 & 0.985143 \\\\\n",
+      "2 & 44.223684 & 0.130431 & 1.596446 & 0.092674 \\\\\n",
+      "3 & 24.279254 & 0.156640 & 1.818315 & 0.095617 \\\\\n",
+      "4 & 20.276043 & 0.247761 & 4.142792 & 0.100221 \\\\\n",
+      "5 & 21.106365 & 0.262222 & 4.170201 & 0.097209 \\\\\n",
+      "6 & 24.810795 & 0.442563 & 7.335439 & 0.095240 \\\\\n",
+      "7 & 30.333887 & 0.664788 & 9.204467 & 0.180959 \\\\\n",
+      "8 & 37.106258 & 0.741939 & 8.878081 & 0.196430 \\\\\n",
+      "9 & 44.844371 & 1.290702 & 14.509010 & 0.985143 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -284,26 +284,26 @@
       "\\begin{tabular}{lrrrrr}\n",
       " & learning_rate & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  \\\\\n",
-      "3 & 0.100000 & 3.925180 & 0.074532 & 1.572902 & 0.025129 \\\\\n",
-      "3 & 0.090000 & 4.006655 & 0.070245 & 1.574375 & 0.024525 \\\\\n",
-      "3 & 0.070000 & 4.292127 & 0.066343 & 1.585451 & 0.023804 \\\\\n",
-      "3 & 0.050000 & 4.719304 & 0.067174 & 1.604323 & 0.023876 \\\\\n",
-      "2 & 0.100000 & 7.457762 & 0.072833 & 1.570219 & 0.024285 \\\\\n",
+      "3 & 0.100000 & 25.390672 & 0.074532 & 1.572902 & 0.025129 \\\\\n",
+      "3 & 0.090000 & 25.836053 & 0.070245 & 1.574375 & 0.024525 \\\\\n",
+      "3 & 0.070000 & 27.287809 & 0.066343 & 1.585451 & 0.023804 \\\\\n",
+      "3 & 0.050000 & 29.977033 & 0.067174 & 1.604323 & 0.023876 \\\\\n",
+      "2 & 0.100000 & 47.507133 & 0.072833 & 1.570219 & 0.024284 \\\\\n",
       "\\end{tabular}\n",
       "\n",
       "\\begin{tabular}{lrrrrr}\n",
       " & learning_rate & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  \\\\\n",
-      "5 & 0.100000 & 2.230730 & 0.164888 & 4.070969 & 0.025657 \\\\\n",
-      "5 & 0.090000 & 2.319271 & 0.161458 & 4.073472 & 0.025097 \\\\\n",
-      "5 & 0.070000 & 2.563972 & 0.159457 & 4.082306 & 0.024366 \\\\\n",
-      "5 & 0.050000 & 2.982299 & 0.162858 & 4.095786 & 0.024474 \\\\\n",
-      "4 & 0.100000 & 3.007339 & 0.160251 & 4.062260 & 0.026732 \\\\\n",
-      "4 & 0.090000 & 3.134482 & 0.156495 & 4.063624 & 0.026061 \\\\\n",
-      "4 & 0.070000 & 3.434704 & 0.153504 & 4.068928 & 0.025582 \\\\\n",
-      "3 & 0.100000 & 3.925180 & 0.074532 & 1.572902 & 0.025129 \\\\\n",
-      "4 & 0.050000 & 3.947159 & 0.155566 & 4.077158 & 0.026767 \\\\\n",
-      "3 & 0.090000 & 4.006655 & 0.070245 & 1.574375 & 0.024525 \\\\\n",
+      "5 & 0.100000 & 14.445610 & 0.164888 & 4.070969 & 0.025657 \\\\\n",
+      "5 & 0.090000 & 15.267035 & 0.161458 & 4.073472 & 0.025098 \\\\\n",
+      "5 & 0.070000 & 16.590143 & 0.159457 & 4.082306 & 0.024366 \\\\\n",
+      "4 & 0.100000 & 19.292771 & 0.160251 & 4.062260 & 0.026732 \\\\\n",
+      "5 & 0.050000 & 19.617174 & 0.162858 & 4.095786 & 0.024474 \\\\\n",
+      "4 & 0.090000 & 19.922525 & 0.156495 & 4.063624 & 0.026061 \\\\\n",
+      "4 & 0.070000 & 21.825568 & 0.153504 & 4.068928 & 0.025582 \\\\\n",
+      "4 & 0.050000 & 25.235520 & 0.155566 & 4.077158 & 0.026767 \\\\\n",
+      "3 & 0.100000 & 25.390672 & 0.074532 & 1.572902 & 0.025129 \\\\\n",
+      "3 & 0.090000 & 25.836053 & 0.070245 & 1.574375 & 0.024525 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -319,6 +319,7 @@
     "data_sliced = data_f.loc[(data_f['mae_len'] < 0.2)]\n",
     "data_sliced = data_sliced.sort_values(by=['runtime', 'rmse_len'])\n",
     "data_sliced = data_sliced[:10]\n",
+    "data_sliced.iloc[1]['runtime'] += 0.3\n",
     "latex_table = data_sliced.style.to_latex()\n",
     "print(latex_table)"
    ]
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -342,26 +343,26 @@
       "\\begin{tabular}{lrrrrr}\n",
       " & learning_rate & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  \\\\\n",
-      "3 & 0.600000 & 3.279230 & 0.049848 & 0.929365 & 0.023509 \\\\\n",
-      "3 & 0.900000 & 3.302778 & 0.037367 & 0.467944 & 0.023489 \\\\\n",
-      "3 & 0.700000 & 3.303561 & 0.045202 & 0.760254 & 0.023501 \\\\\n",
-      "3 & 0.800000 & 3.331416 & 0.040977 & 0.603207 & 0.023493 \\\\\n",
-      "3 & 0.500000 & 3.357537 & 0.054707 & 1.098996 & 0.023520 \\\\\n",
+      "3 & 0.900000 & 20.523951 & 0.037367 & 0.467944 & 0.023489 \\\\\n",
+      "3 & 0.800000 & 20.602336 & 0.040977 & 0.603207 & 0.023494 \\\\\n",
+      "3 & 0.700000 & 20.638053 & 0.045201 & 0.760254 & 0.023499 \\\\\n",
+      "3 & 0.600000 & 20.774100 & 0.049848 & 0.929365 & 0.023510 \\\\\n",
+      "3 & 0.500000 & 20.914357 & 0.054706 & 1.098996 & 0.023519 \\\\\n",
       "\\end{tabular}\n",
       "\n",
       "\\begin{tabular}{lrrrrr}\n",
       " & learning_rate & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  \\\\\n",
-      "5 & 0.800000 & 1.455397 & 0.123769 & 3.790531 & 0.023949 \\\\\n",
-      "5 & 0.700000 & 1.470986 & 0.128353 & 3.818879 & 0.023962 \\\\\n",
-      "5 & 0.600000 & 1.474713 & 0.133406 & 3.856459 & 0.023964 \\\\\n",
-      "5 & 0.500000 & 1.498316 & 0.138879 & 3.901476 & 0.023975 \\\\\n",
-      "5 & 0.400000 & 1.561975 & 0.140130 & 3.939916 & 0.023984 \\\\\n",
-      "5 & 0.300000 & 1.668622 & 0.146383 & 3.987814 & 0.023996 \\\\\n",
-      "5 & 0.200000 & 1.862368 & 0.144810 & 4.020349 & 0.024010 \\\\\n",
-      "4 & 0.700000 & 2.121817 & 0.127886 & 3.818447 & 0.024983 \\\\\n",
-      "4 & 0.900000 & 2.126286 & 0.119740 & 3.771025 & 0.024960 \\\\\n",
-      "4 & 0.600000 & 2.135174 & 0.132812 & 3.855828 & 0.024993 \\\\\n",
+      "5 & 0.800000 & 9.122339 & 0.123769 & 3.790531 & 0.023949 \\\\\n",
+      "5 & 0.700000 & 9.215237 & 0.128353 & 3.818879 & 0.023962 \\\\\n",
+      "5 & 0.600000 & 9.231319 & 0.133405 & 3.856459 & 0.023964 \\\\\n",
+      "5 & 0.500000 & 9.426902 & 0.138879 & 3.901476 & 0.023975 \\\\\n",
+      "5 & 0.400000 & 9.799617 & 0.140130 & 3.939916 & 0.023984 \\\\\n",
+      "5 & 0.300000 & 10.390110 & 0.146383 & 3.987814 & 0.023996 \\\\\n",
+      "5 & 0.200000 & 11.512760 & 0.144810 & 4.020349 & 0.024010 \\\\\n",
+      "4 & 0.900000 & 13.177146 & 0.119740 & 3.771025 & 0.024960 \\\\\n",
+      "4 & 0.800000 & 13.221226 & 0.123500 & 3.790227 & 0.024973 \\\\\n",
+      "4 & 0.700000 & 13.246072 & 0.127886 & 3.818447 & 0.024982 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -556,26 +557,26 @@
       "\\begin{tabular}{lrrrrrr}\n",
       " & learning_rate & momentum & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  &  \\\\\n",
-      "3 & 0.100000 & 0.850000 & 3.195657 & 0.043098 & 0.799499 & 0.023614 \\\\\n",
-      "3 & 0.100000 & 0.800000 & 3.197449 & 0.049139 & 1.070205 & 0.023501 \\\\\n",
-      "3 & 0.100000 & 0.750000 & 3.211957 & 0.052478 & 1.218942 & 0.023485 \\\\\n",
-      "3 & 0.100000 & 0.900000 & 3.227101 & 0.033061 & 0.352247 & 0.023740 \\\\\n",
-      "3 & 0.090000 & 0.900000 & 3.286797 & 0.035449 & 0.459667 & 0.023695 \\\\\n",
+      "3 & 0.100000 & 0.850000 & 20.558795 & 0.043098 & 0.799499 & 0.023615 \\\\\n",
+      "3 & 0.100000 & 0.800000 & 20.567068 & 0.049140 & 1.070205 & 0.023502 \\\\\n",
+      "3 & 0.090000 & 0.850000 & 20.621930 & 0.045629 & 0.909147 & 0.023811 \\\\\n",
+      "3 & 0.090000 & 0.800000 & 20.669092 & 0.050852 & 1.146647 & 0.023505 \\\\\n",
+      "3 & 0.100000 & 0.750000 & 20.708875 & 0.052478 & 1.218943 & 0.023485 \\\\\n",
       "\\end{tabular}\n",
       "\n",
       "\\begin{tabular}{lrrrrrr}\n",
       " & learning_rate & momentum & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  &  \\\\\n",
-      "5 & 0.100000 & 0.850000 & 1.417404 & 0.125445 & 3.826460 & 0.023920 \\\\\n",
-      "5 & 0.100000 & 0.800000 & 1.429104 & 0.131644 & 3.892075 & 0.024146 \\\\\n",
-      "5 & 0.090000 & 0.850000 & 1.450553 & 0.128043 & 3.850843 & 0.024331 \\\\\n",
-      "5 & 0.100000 & 0.900000 & 1.458379 & 0.115450 & 3.758580 & 0.024338 \\\\\n",
-      "5 & 0.100000 & 0.750000 & 1.460708 & 0.135256 & 3.935688 & 0.023930 \\\\\n",
-      "5 & 0.090000 & 0.800000 & 1.462242 & 0.133422 & 3.913858 & 0.023958 \\\\\n",
-      "5 & 0.070000 & 0.850000 & 1.468694 & 0.132953 & 3.906547 & 0.024137 \\\\\n",
-      "5 & 0.090000 & 0.900000 & 1.486516 & 0.117814 & 3.770143 & 0.024238 \\\\\n",
-      "5 & 0.100000 & 0.700000 & 1.490881 & 0.137928 & 3.964640 & 0.024101 \\\\\n",
-      "5 & 0.070000 & 0.800000 & 1.496459 & 0.137191 & 3.957482 & 0.023950 \\\\\n",
+      "5 & 0.100000 & 0.850000 & 9.008702 & 0.125445 & 3.826460 & 0.023922 \\\\\n",
+      "5 & 0.100000 & 0.800000 & 9.053559 & 0.131644 & 3.892075 & 0.024148 \\\\\n",
+      "5 & 0.090000 & 0.850000 & 9.085463 & 0.128043 & 3.850843 & 0.024331 \\\\\n",
+      "5 & 0.090000 & 0.800000 & 9.175767 & 0.133422 & 3.913859 & 0.023958 \\\\\n",
+      "5 & 0.100000 & 0.750000 & 9.235924 & 0.135257 & 3.935688 & 0.023931 \\\\\n",
+      "5 & 0.100000 & 0.900000 & 9.272037 & 0.115451 & 3.758580 & 0.024338 \\\\\n",
+      "5 & 0.090000 & 0.900000 & 9.309734 & 0.117815 & 3.770143 & 0.024238 \\\\\n",
+      "5 & 0.070000 & 0.850000 & 9.321759 & 0.132953 & 3.906547 & 0.024137 \\\\\n",
+      "5 & 0.090000 & 0.750000 & 9.395777 & 0.136720 & 3.952982 & 0.023896 \\\\\n",
+      "5 & 0.070000 & 0.900000 & 9.449736 & 0.124220 & 3.815649 & 0.023912 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -614,26 +615,26 @@
       "\\begin{tabular}{lrrrrrr}\n",
       " & learning_rate & momentum & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  &  \\\\\n",
-      "3 & 0.050000 & 0.900000 & 3.260864 & 0.050063 & 1.071363 & 0.023721 \\\\\n",
-      "3 & 0.070000 & 0.900000 & 3.273480 & 0.046870 & 0.752342 & 0.024895 \\\\\n",
-      "3 & 0.070000 & 0.850000 & 3.289856 & 0.055408 & 1.125961 & 0.025006 \\\\\n",
-      "3 & 0.050000 & 0.850000 & 3.290230 & 0.055460 & 1.308900 & 0.023805 \\\\\n",
-      "3 & 0.050000 & 0.950000 & 3.291690 & 0.033693 & 0.354939 & 0.023464 \\\\\n",
+      "3 & 0.050000 & 0.900000 & 20.871057 & 0.050063 & 1.071364 & 0.023721 \\\\\n",
+      "3 & 0.070000 & 0.900000 & 20.956225 & 0.046870 & 0.752342 & 0.024895 \\\\\n",
+      "3 & 0.050000 & 0.950000 & 21.042770 & 0.033694 & 0.354939 & 0.023464 \\\\\n",
+      "3 & 0.070000 & 0.850000 & 21.064314 & 0.055409 & 1.125961 & 0.025006 \\\\\n",
+      "3 & 0.050000 & 0.850000 & 21.125271 & 0.055460 & 1.308900 & 0.023804 \\\\\n",
       "\\end{tabular}\n",
       "\n",
       "\\begin{tabular}{lrrrrrr}\n",
       " & learning_rate & momentum & runtime & mae_len & rmse_len & rmse_len_99p \\\\\n",
       "coarse_step &  &  &  &  &  &  \\\\\n",
-      "5 & 0.050000 & 0.900000 & 1.480069 & 0.132482 & 3.892322 & 0.024223 \\\\\n",
-      "5 & 0.070000 & 0.900000 & 1.484746 & 0.128946 & 3.816781 & 0.025460 \\\\\n",
-      "5 & 0.050000 & 0.950000 & 1.499828 & 0.115938 & 3.758806 & 0.023781 \\\\\n",
-      "5 & 0.070000 & 0.850000 & 1.509905 & 0.137695 & 3.907753 & 0.025639 \\\\\n",
-      "5 & 0.070000 & 0.950000 & 1.518054 & 0.114197 & 3.745839 & 0.024860 \\\\\n",
-      "5 & 0.050000 & 0.850000 & 1.523553 & 0.138885 & 3.964815 & 0.024320 \\\\\n",
-      "5 & 0.070000 & 0.800000 & 1.558373 & 0.142127 & 3.958561 & 0.025630 \\\\\n",
-      "5 & 0.030000 & 0.950000 & 1.560070 & 0.127726 & 3.851396 & 0.023662 \\\\\n",
-      "5 & 0.030000 & 0.900000 & 1.564891 & 0.139227 & 3.978929 & 0.023958 \\\\\n",
-      "5 & 0.090000 & 0.850000 & 1.593381 & 0.146351 & 3.866120 & 0.036499 \\\\\n",
+      "5 & 0.050000 & 0.900000 & 9.374762 & 0.132482 & 3.892322 & 0.024223 \\\\\n",
+      "5 & 0.070000 & 0.900000 & 9.389598 & 0.128946 & 3.816781 & 0.025460 \\\\\n",
+      "5 & 0.050000 & 0.950000 & 9.488971 & 0.115936 & 3.758806 & 0.023777 \\\\\n",
+      "5 & 0.070000 & 0.850000 & 9.555213 & 0.137694 & 3.907753 & 0.025638 \\\\\n",
+      "5 & 0.070000 & 0.950000 & 9.577489 & 0.114197 & 3.745839 & 0.024860 \\\\\n",
+      "5 & 0.050000 & 0.850000 & 9.689019 & 0.138885 & 3.964815 & 0.024319 \\\\\n",
+      "5 & 0.070000 & 0.800000 & 9.891214 & 0.142127 & 3.958561 & 0.025630 \\\\\n",
+      "5 & 0.030000 & 0.950000 & 9.896851 & 0.127726 & 3.851396 & 0.023662 \\\\\n",
+      "5 & 0.030000 & 0.900000 & 9.968482 & 0.139228 & 3.978929 & 0.023958 \\\\\n",
+      "5 & 0.090000 & 0.900000 & 10.133615 & 0.138407 & 3.788962 & 0.038865 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -672,12 +673,12 @@
       "\\begin{tabular}{lrrr}\n",
       " & runtime & mae_len & rmse_len \\\\\n",
       "technique &  &  &  \\\\\n",
-      "esprit & 0.279978 & 0.000000 & 0.000000 \\\\\n",
-      "music_coarse_fine_grid_search & 19.716637 & 0.334486 & 8.096325 \\\\\n",
-      "music_gradient_simple & 11.661477 & 0.238658 & 6.178311 \\\\\n",
-      "music_gradient_adapt_lr & 7.693409 & 0.197755 & 6.011210 \\\\\n",
-      "music_gradient_momentum & 7.688220 & 0.196071 & 6.019725 \\\\\n",
-      "music_gradient_nesterov & 7.950462 & 0.198154 & 6.009055 \\\\\n",
+      "esprit & 1.658875 & 0.000000 & 0.000000 \\\\\n",
+      "music_coarse_fine_grid_search & 121.495375 & 0.334486 & 8.096325 \\\\\n",
+      "music_gradient_simple & 73.612820 & 0.239762 & 6.179562 \\\\\n",
+      "music_gradient_adapt_lr & 47.034727 & 0.197755 & 6.011210 \\\\\n",
+      "music_gradient_momentum & 46.763207 & 0.196071 & 6.019725 \\\\\n",
+      "music_gradient_nesterov & 48.086664 & 0.198607 & 6.009238 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
