Change design of plots

--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,27 +170,28 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(7,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 14\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
-    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo Gradiente Simples')\n",
-    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE Gradiente Simples')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ Rate}$')\n",
+    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
+    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax1.set_xlabel(r'$ \\alpha $')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
     "ax2.set_ylabel('RMSE')\n",
     "lgd = lgd1 + lgd2\n",
     "labels = [l.get_label() for l in lgd]\n",
     "ax1.legend(lgd, labels, loc='upper left')\n",
-    "plt.savefig(\"hp_gradiente_simples_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"gradiente_simples_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,21 +199,22 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(7,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 14\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
-    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo Gradiente LR Adaptável')\n",
-    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE Gradiente LR Adaptável')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ Rate}$')\n",
+    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' adaptável')\n",
+    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' adaptável')\n",
+    "ax1.set_xlabel(r'$ \\alpha $')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
     "ax2.set_ylabel('RMSE')\n",
     "lgd = lgd1 + lgd2\n",
     "labels = [l.get_label() for l in lgd]\n",
     "ax1.legend(lgd, labels, loc='upper left')\n",
-    "plt.savefig(\"hp_gradiente_simples_adapt_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"gradiente_simples_adapt_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,14 +236,15 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced.index.values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
-    "ax1.plot(index, runtime_data, 'b-', label='Tempo Gradiente Simples')\n",
-    "ax2.plot(index, rmse_data, 'b--', label='RMSE Gradiente Simples')\n",
+    "ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' estático')\n",
     "ax1.set_xlabel('Passo Grosso (°)')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
     "ax2.set_ylabel('RMSE')\n",
@@ -250,11 +253,11 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced.index.values\n",
-    "ax1.plot(index, runtime_data, 'r-', label='Tempo Gradiente LR Adaptável')\n",
-    "ax2.plot(index, rmse_data, 'r--', label='RMSE Gradiente LR Adaptável')\n",
+    "ax1.plot(index, runtime_data, 'r-', label='Tempo ' + r'$ \\alpha $' +  ' Adaptável')\n",
+    "ax2.plot(index, rmse_data, 'r--', label='RMSE ' + r'$ \\alpha $' +  ' Adaptável')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
-    "plt.savefig(\"hp_gradiente_simples_pg.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"gradiente_simples_pg.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -274,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,10 +426,11 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced['momentum'].values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
@@ -443,7 +447,7 @@
     "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
-    "plt.savefig(\"hp_momentum_beta.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"momentum_beta.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -456,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,10 +469,11 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
@@ -485,7 +490,7 @@
     "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
-    "plt.savefig(\"hp_momentum_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"momentum_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -498,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,10 +512,11 @@
     "runtime_data = data_sliced['runtime'].values\n",
     "rmse_data = data_sliced['rmse_len'].values\n",
     "index = data_sliced.index.values\n",
-    "fig = plt.figure(figsize=(10,12), dpi=200)\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
     "plt.rcParams['font.family'] = ['serif']\n",
     "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
@@ -527,7 +533,7 @@
     "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
-    "plt.savefig(\"hp_momentum_pg.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"momentum_pg.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -547,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
