--- a/src/research/data_analysis.ipynb
+++ b/src/research/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(root_dir + \"/data/experimental_results/hyperparameters/\" + \"coarse_fine_search.csv\", index_col=0, float_precision='high')\n",
+    "data = data[['runtime', 'mae_len','rmse_len', 'rmse_len_99p']]\n",
+    "data['runtime'] = data['runtime'] / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runtime_data = data['runtime'].values\n",
+    "mae_data = data['mae_len'].values\n",
+    "index = data.index.values\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
+    "plt.rcParams['text.usetex'] = True\n",
+    "plt.rcParams['font.family'] = ['serif']\n",
+    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
+    "ax1 = plt.axes()\n",
+    "ax2 = ax1.twinx()\n",
+    "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
+    "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax1.set_xlabel('Passo Grosso (°)')\n",
+    "ax1.set_ylabel('Tempo (s)')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
+    "lgd = lgd1 + lgd2\n",
+    "labels = [l.get_label() for l in lgd]\n",
+    "ax1.legend(lgd, labels, loc='upper left')\n",
+    "plt.savefig(\"busca_grossa_fina_pg.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -125,9 +164,6 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(root_dir + \"/data/experimental_results/hyperparameters/\" + \"coarse_fine_search.csv\", index_col=0, float_precision='high')\n",
-    "data = data[['runtime', 'mae_len','rmse_len', 'rmse_len_99p']]\n",
-    "data['runtime'] = data['runtime'] / 1000\n",
     "latex_table = data.style.to_latex()\n",
     "print(latex_table)"
    ]
@@ -141,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,13 +198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_sliced = data_f.loc[(data_f.index == 4)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
     "fig = plt.figure(figsize=(7,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -178,10 +214,10 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
-    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' estático')\n",
-    "ax1.set_xlabel(r'$ \\alpha $')\n",
+    "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "lgd = lgd1 + lgd2\n",
     "labels = [l.get_label() for l in lgd]\n",
     "ax1.legend(lgd, labels, loc='upper left')\n",
@@ -191,13 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_sliced = data_a.loc[(data_a.index == 4)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
     "fig = plt.figure(figsize=(7,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -207,10 +243,10 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "lgd1 = ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' adaptável')\n",
-    "lgd2 = ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' adaptável')\n",
-    "ax1.set_xlabel(r'$ \\alpha $')\n",
+    "lgd2 = ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' adaptável')\n",
+    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "lgd = lgd1 + lgd2\n",
     "labels = [l.get_label() for l in lgd]\n",
     "ax1.legend(lgd, labels, loc='upper left')\n",
@@ -227,14 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fix\n",
     "data_sliced = data_f.loc[(data_f['learning_rate'] == 0.1)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
     "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -244,17 +280,17 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo ' + r'$ \\alpha $' +  ' estático')\n",
-    "ax2.plot(index, rmse_data, 'b--', label='RMSE ' + r'$ \\alpha $' +  ' estático')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE ' + r'$ \\alpha $' +  ' estático')\n",
     "ax1.set_xlabel('Passo Grosso (°)')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "# Adapt\n",
     "data_sliced = data_a.loc[(data_a['learning_rate'] == 0.7)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo ' + r'$ \\alpha $' +  ' Adaptável')\n",
-    "ax2.plot(index, rmse_data, 'r--', label='RMSE ' + r'$ \\alpha $' +  ' Adaptável')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE ' + r'$ \\alpha $' +  ' Adaptável')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
     "plt.savefig(\"gradiente_simples_pg.png\", bbox_inches='tight', pad_inches=0)\n",
@@ -277,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,14 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Momentum\n",
-    "data_sliced = data_m.loc[(data_m.index == 4) & (data_m['learning_rate'] == 0.07)]\n",
+    "data_sliced = data_m.loc[(data_m.index == 4) & (data_m['learning_rate'] == 0.05)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['momentum'].values\n",
     "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -434,20 +470,56 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
-    "ax2.plot(index, rmse_data, 'b--', label='RMSE Momentum')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
     "ax1.set_xlabel('Momentum')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "# Nesterov\n",
-    "data_sliced = data_n.loc[(data_n.index == 4) & (data_n['learning_rate'] == 0.07)]\n",
+    "data_sliced = data_n.loc[(data_n.index == 4) & (data_n['learning_rate'] == 0.05)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['momentum'].values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
-    "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
-    "plt.savefig(\"momentum_beta.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.savefig(\"momentum_beta_1.png\", bbox_inches='tight', pad_inches=0)\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Momentum\n",
+    "data_sliced = data_m.loc[(data_m.index == 4) & (data_m['learning_rate'] == 0.1)]\n",
+    "runtime_data = data_sliced['runtime'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
+    "index = data_sliced['momentum'].values\n",
+    "fig = plt.figure(figsize=(12,8), dpi=200)\n",
+    "plt.rcParams['text.usetex'] = True\n",
+    "plt.rcParams['font.family'] = ['serif']\n",
+    "plt.rcParams['font.serif'] = ['Latin Modern Roman']\n",
+    "plt.rcParams['font.size'] = 12\n",
+    "ax1 = plt.axes()\n",
+    "ax2 = ax1.twinx()\n",
+    "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
+    "ax1.set_xlabel('Momentum')\n",
+    "ax1.set_ylabel('Tempo (s)')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
+    "# Nesterov\n",
+    "data_sliced = data_n.loc[(data_n.index == 4) & (data_n['learning_rate'] == 0.1)]\n",
+    "runtime_data = data_sliced['runtime'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
+    "index = data_sliced['momentum'].values\n",
+    "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
+    "ax1.legend(loc='upper left')\n",
+    "ax2.legend(loc='upper right')\n",
+    "plt.savefig(\"momentum_beta_2.png\", bbox_inches='tight', pad_inches=0)\n",
     "plt.close()"
    ]
   },
@@ -460,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Momentum\n",
     "data_sliced = data_m.loc[(data_m.index == 4) & (data_m['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
     "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -477,17 +549,17 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
-    "ax2.plot(index, rmse_data, 'b--', label='RMSE Momentum')\n",
-    "ax1.set_xlabel('$\\it{Learning\\ Rate}$')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
+    "ax1.set_xlabel('$\\it{Learning\\ rate}$')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "# Nesterov\n",
     "data_sliced = data_n.loc[(data_n.index == 4) & (data_n['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced['learning_rate'].values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
-    "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
     "plt.savefig(\"momentum_alfa.png\", bbox_inches='tight', pad_inches=0)\n",
@@ -503,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Momentum\n",
     "data_sliced = data_m.loc[(data_m['learning_rate'] == 0.07) & (data_m['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
     "fig = plt.figure(figsize=(12,8), dpi=200)\n",
     "plt.rcParams['text.usetex'] = True\n",
@@ -520,17 +592,17 @@
     "ax1 = plt.axes()\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(index, runtime_data, 'b-', label='Tempo Momentum')\n",
-    "ax2.plot(index, rmse_data, 'b--', label='RMSE Momentum')\n",
+    "ax2.plot(index, mae_data, 'b--', label='MAE Momentum')\n",
     "ax1.set_xlabel('Passo Grosso (°)')\n",
     "ax1.set_ylabel('Tempo (s)')\n",
-    "ax2.set_ylabel('RMSE')\n",
+    "ax2.set_ylabel('MAE (°)')\n",
     "# Nesterov\n",
     "data_sliced = data_n.loc[(data_n['learning_rate'] == 0.07) & (data_n['momentum'] == 0.9)]\n",
     "runtime_data = data_sliced['runtime'].values\n",
-    "rmse_data = data_sliced['rmse_len'].values\n",
+    "mae_data = data_sliced['mae_len'].values\n",
     "index = data_sliced.index.values\n",
     "ax1.plot(index, runtime_data, 'r-', label='Tempo Nesterov')\n",
-    "ax2.plot(index, rmse_data, 'r--', label='RMSE Nesterov')\n",
+    "ax2.plot(index, mae_data, 'r--', label='MAE Nesterov')\n",
     "ax1.legend(loc='upper left')\n",
     "ax2.legend(loc='upper right')\n",
     "plt.savefig(\"momentum_pg.png\", bbox_inches='tight', pad_inches=0)\n",
@@ -553,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -697,6 +769,13 @@
     "latex_table = data.style.to_latex()\n",
     "print(latex_table)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -718,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
